zien24_implementation/org/objects/dlrs__LookupRollupSummary__c.object
<CustomObject>
    <fields>
        <fullName>dlrs__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For Realtime rollups can only be set when the Child Apex Trigger has been deployed.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dlrs__AggregateAllRows__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Includes child records that have been archived by the system and/or placed in the recycle bin.</inlineHelpText>
        <label>Aggregate All Rows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dlrs__AggregateOperation__c</fullName>
        <inlineHelpText>Rollup operation.</inlineHelpText>
        <label>Aggregate Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sum</fullName>
                    <default>true</default>
                    <label>Sum</label>
                </value>
                <value>
                    <fullName>Max</fullName>
                </value>
                <value>
                    <fullName>Min</fullName>
                </value>
                <value>
                    <fullName>Avg</fullName>
                </value>
                <value>
                    <fullName>Count</fullName>
                </value>
                <value>
                    <fullName>Count Distinct</fullName>
                </value>
                <value>
                    <fullName>Concatenate</fullName>
                </value>
                <value>
                    <fullName>Concatenate Distinct</fullName>
                </value>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Last</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dlrs__AggregateResultField__c</fullName>
        <inlineHelpText>API name of the field that will store the result of the rollup on the Parent Object, e.g. AnnualRevenue</inlineHelpText>
        <label>Aggregate Result Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dlrs__CalculateJobId__c</fullName>
        <inlineHelpText>This field is used by the system when using the Calculate button to track if a calculation job is already running. Clear this field if the system reports the calculate job is already running and you known this is not the case.</inlineHelpText>
        <label>Calculate Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dlrs__CalculationMode__c</fullName>
        <inlineHelpText>Realtime and Schedule modes require an Apex Trigger to be deployed for the Child Object. Click Manage Child Trigger button to deploy.</inlineHelpText>
        <label>Calculation Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Realtime</fullName>
                    <default>true</default>
                    <label>Realtime</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Process Builder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dlrs__CalculationSharingMode__c</fullName>
        <inlineHelpText>Determines if the Sharing Rules defined on the Child Object are considered when calculating the rollup. Default is User.</inlineHelpText>
        <label>Calculation Sharing Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                    <default>true</default>
                    <label>User</label>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dlrs__ChildObject__c</fullName>
        <inlineHelpText>API name of the Child Object, e.g. Opportunity</inlineHelpText>
        <label>Child Object</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dlrs__ConcatenateDelimiter__c</fullName>
        <inlineHelpText>Enter the character or characters to delimit values in the Field to Aggregate when rolling up text values into the Aggregate Result Field, enter BR() for new line. Only applies when using Concatenate operation.</inlineHelpText>
        <label>Concatenate Delimiter</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dlrs__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dlrs__FieldToAggregate__c</fullName>
        <inlineHelpText>API name of the field on the Child Object that contains the value to rollup, e.g. Amount</inlineHelpText>
        <label>Field to Aggregate</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dlrs__FieldToOrderBy__c</fullName>
        <description>Examples:
1) Amount__c
2) Amount__c, Color__c ASC
3) Amount__c NULLS LAST, Color__c DESC NULLS LAST</description>
        <inlineHelpText>Only applicable when using the Concatenate, Concatenate Distinct, Last and First aggregate operations. Supports multiple fields (comma separated) with optional ASC/DESC and/or NULLS FIRST/LAST.</inlineHelpText>
        <label>Field to Order By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dlrs__ParentObject__c</fullName>
        <inlineHelpText>API name of the Parent Object, e.g. Account</inlineHelpText>
        <label>Parent Object</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dlrs__RelationshipCriteriaFields__c</fullName>
        <inlineHelpText>If you have specified a relationship criteria, you must confirm the fields referenced by it here on separate lines, for example for criteria StageName = &apos;Won&apos; list StageName in this field. You do not need to specify the Field to Aggregate field however.</inlineHelpText>
        <label>Relationship Criteria Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>dlrs__RelationshipCriteria__c</fullName>
        <inlineHelpText>SOQL WHERE clause applied when querying Child Object records, e.g. Amount &gt; 200</inlineHelpText>
        <label>Relationship Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dlrs__RelationshipField__c</fullName>
        <inlineHelpText>API name of the Lookup field on the Child Object relating to the Parent Object, e.g. AccountId</inlineHelpText>
        <label>Relationship Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dlrs__RowLimit__c</fullName>
        <inlineHelpText>Limits the number of rows used in the rollup. Applies only to the Last and Concatenate operators.</inlineHelpText>
        <label>Row Limit</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dlrs__TestCodeSeeAllData__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only use this option as a last resort to get the generated test or custom test code working. It is generally considered bad practice to make your test dependent on org data. Always try to create test data in the test code if possible.</inlineHelpText>
        <label>Test Code See All Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dlrs__TestCode__c</fullName>
        <inlineHelpText>This tool utilises a dynamically generated Apex Trigger and by default a generated Apex Test. Use this field if instructed by a developer to replace the generated test code. For more information see the tools Wiki on GitHub.</inlineHelpText>
        <label>Test Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dlrs__UniqueName__c</fullName>
        <label>Lookup Rollup Summary Unique Name</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Lookup Rollup Summary</label>
    <listViews>
        <fullName>dlrs__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Lookup Rollup Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookup Rollup Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>